feat(git): add connection.json to ignored files
Added db_ui/connections.json to the .gitignore file to prevent tracking of sensitive connection configurations.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ Thumbs.db
 # Uncomment the line below if you want to ignore it (user-specific packages)
 # Brewfile
 Brewfile.backup.*
+db_ui/connections.json
