--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,4 @@ Thumbs.db
 # Uncomment the line below if you want to ignore it (user-specific packages)
 # Brewfile
 Brewfile.backup.*
-db_ui/connections.json
+**/connections.json
