feat(keymaps): add database management and window maximizer plugins Add vim-dadbod for database management: - Install vim-dadbod,...

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,8 @@ Thumbs.db
 # Brewfile
 Brewfile.backup.*
 **/connections.json
+# Avante environment variables
+system/avante.env
 .cursor/
 .specify/
 
